force-app/main/default/objects/Portal_Banner__c/fields/Banner_Style__c.field-meta.xml
<CustomField>
    <fullName>Banner_Style__c</fullName>
    <description>Visual style applied to the banner on the portal</description>
    <label>Banner Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
                <default>true</default>
                <label>Info</label>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>