force-app/main/default/objects/Portal_Banner__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the banner is shown on the portal</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>