force-app/main/default/objects/Portal_Banner__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Banner content displayed to portal users</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>